<resources>
    <string name="app_name">Home Reef Care</string>
    <string name="slogan_logo">BUILD YOUR TANK</string>
    <string name="slogan">Your reef care platform</string>
    <string name="app_ver">version 0.0.1</string>
    <string name="create_account">Create an account </string>
    <string name="create_account_info">to access more features of the platform</string>
    <string name="create_account_btn">Create account</string>
    <string name="have_account">I already have an account</string>
    <string name="create_password_btn">Create password</string>
    <string name="sing_in">Sign-in to account</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="sign_btn">Sign-in</string>
    <string name="your_prof">Your profile</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm password</string>
    <string name="username">Email or Username</string>
    <string name="fremail">E-mail</string>
    <string name="helper_fremail">Enter your e-mail</string>
    <string name="fruser_name">User Name</string>
    <string name="helper_user_name">Enter your user name</string>
    <string name="measure">Measurements</string>
    <string name="meas_ca">Ca</string>
    <string name="meas_mg">Mg</string>
    <string name="meas_ph">PH</string>
    <string name="meas_no3">NO3</string>
    <string name="meas_po4">PO4</string>
    <string name="meas_kh">KH</string>
    <string name="meas_k">K</string>
    <string name="meas_no2">NO2</string>
    <string name="meas_nh4">NH4</string>
    <string name="meas_temp">Temperature</string>
    <string name="number_c">C</string>
    <string name="ppm">ppm</string>
    <string name="foundat_element">Foundation elements</string>
    <string name="salf">Salinity</string>
    <string name="salt_ppt">ppt</string>
    <string name="count_ppm">ppm</string>
    <string name="alg_ctrl">Algae control</string>
    <string name="save_btn">Save</string>
    <string name="change_water_btm">Change water</string>
    <string name="test_water_btm">Test water</string>
    <string name="measure_btn">Measure</string>
    <string name="date_measurement">Date measurement</string>
    <string name="measurement">Measurement</string>
    <string name="count_dkh">dKh</string>
    <string name="count_mgl">mg/L</string>
    <string name="no_measurements">no measurements</string>
    <string name="meas_p_po4">P-PO4</string>
    <string name="meas_n_no3">N-NO3</string>
    <string name="back_btn">Back</string>
    <string name="err_input">!!! Must be a numeric value !!!</string>
    <string name="err_length">max 6 characters</string>
    <string name="err_input_integer">Should only be a numeric value!!!</string>
    <string name="err_input_double">Should only be a numeric value with a comma!!!</string>
    <string name="skip_btn">Skip</string>
    <string name="step_one">Hello user! \n I\'m glad you chose this app!</string>
    <string name="step_two">This application is designed to save and store \n your measurements of water parameters in a marine aquarium.\n The data is stored on your device and always with you!!! \n on awesome projects</string>
    <string name="step_three">Enjoy using! \n Happy reefing!</string>
    <string name="reading_info">Reading info</string>
    <string name="info">Info</string>
    <string name="home_menu_bottom">Home</string>
    <string name="pictures_menu_bottom">Pictures</string>
    <string name="profile_menu_bottom">Profile</string>
    <string name="profile_text">Profile</string>
    <string name="title_tools">Title will be here....</string>
    <string name="photo_tools">Photo will be here.....</string>
    <string name="back_to_gallery">Back to gallery</string>
    <string name="save_pic_btm">save this picture</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear search</string>
    <string name="notification_title">Chanch water</string>
    <string name="notification_subtitle">It\'s time to change the water in the aquarium. The best volume to replace is 10% of the total volume.</string>
    <string name="notification_schedule_title">Time water change</string>
    <string name="notification_schedule_pattern">Hello</string>
    <string name="notification_schedule_error">Notificftion error</string>
    <string name="reminder_text">Reminder text</string>
    <string name="skip_this">Skip</string>
    <string name="firstname">FirstName:</string>
    <string name="surname">Surname:</string>
    <string name="type_aquarium">Type aquarium:</string>
    <string name="aquarium_volume">Aquarium volume:</string>
</resources>