<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_measurement_text_view"
        style="@style/TextStyle.H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:text="@string/measure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_date_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_measurement_text_view"
        tools:text="20.08.2023  11:20" />
    <!--temperature-->
    <TextView
        android:id="@+id/title_temperature_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_36"
        android:text="@string/meas_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_date_text_view" />

    <TextView
        android:id="@+id/measure_temperature_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_36"
        app:layout_constraintStart_toEndOf="@id/title_temperature_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_date_text_view"
        tools:text="25.2" />

    <TextView
        android:id="@+id/count_temperature_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_36"
        android:text="@string/number_c"
        app:layout_constraintStart_toEndOf="@id/measure_temperature_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_date_text_view" />
    <!--salt-->
    <TextView
        android:id="@+id/title_salt_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/salf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_temperature_text_view" />

    <TextView
        android:id="@+id/measure_salt_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_salt_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_temperature_text_view"
        tools:text="35,0" />

    <TextView
        android:id="@+id/count_salt_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/salt_ppt"
        app:layout_constraintStart_toEndOf="@id/measure_salt_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_temperature_text_view" />

    <TextView
        android:id="@+id/found_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:text="@string/foundat_element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measure_salt_text_view" />

    <!--kh-->
    <TextView
        android:id="@+id/title_kh_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/meas_kh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/found_text_view" />

    <TextView
        android:id="@+id/measure_kh_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_76"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_kh_text_view"
        app:layout_constraintTop_toBottomOf="@+id/found_text_view"
        tools:text="7,8" />

    <TextView
        android:id="@+id/count_kh_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/count_dkh"
        app:layout_constraintStart_toEndOf="@id/measure_kh_text_view"
        app:layout_constraintTop_toBottomOf="@+id/found_text_view" />
    <!--ca-->
    <TextView
        android:id="@+id/title_ca_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/meas_ca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_kh_text_view" />

    <TextView
        android:id="@+id/measure_ca_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_76"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_ca_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_kh_text_view"
        tools:text="425" />

    <TextView
        android:id="@+id/count_ca_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/count_ppm"
        app:layout_constraintStart_toEndOf="@id/measure_ca_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_kh_text_view" />
    <!--mg-->
    <TextView
        android:id="@+id/title_mg_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/meas_mg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_ca_text_view" />

    <TextView
        android:id="@+id/measure_mg_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_76"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_mg_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_ca_text_view"
        tools:text="1250" />

    <TextView
        android:id="@+id/count_mg_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/count_ppm"
        app:layout_constraintStart_toEndOf="@id/measure_mg_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_ca_text_view" />

    <TextView
        android:id="@+id/algcntl_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:text="@string/alg_ctrl"
        app:layout_constraintBottom_toTopOf="@id/title_no3_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_mg_text_view" />

    <!--no3-->
    <TextView
        android:id="@+id/title_no3_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/meas_no3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/algcntl_text_view" />

    <TextView
        android:id="@+id/measure_no3_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_76"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_no3_text_view"
        app:layout_constraintTop_toBottomOf="@+id/algcntl_text_view"
        tools:text="1.0" />

    <TextView
        android:id="@+id/count_no3_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/count_mgl"
        app:layout_constraintStart_toEndOf="@id/measure_no3_text_view"
        app:layout_constraintTop_toBottomOf="@+id/algcntl_text_view" />
    <!--n-no3-->
    <TextView
        android:id="@+id/title_n_no3_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_76"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/meas_n_no3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_no3_text_view" />

    <TextView
        android:id="@+id/measure_n_no3_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_n_no3_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_no3_text_view"
        tools:text="0.25" />

    <TextView
        android:id="@+id/count_n_no3_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/count_mgl"
        app:layout_constraintStart_toEndOf="@id/measure_n_no3_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_no3_text_view" />
    <!--po4-->
    <TextView
        android:id="@+id/title_po4_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/meas_po4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_n_no3_text_view" />

    <TextView
        android:id="@+id/measure_po4_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_76"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_po4_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_n_no3_text_view"
        tools:text="0.02" />

    <TextView
        android:id="@+id/count_po4_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/count_mgl"
        app:layout_constraintStart_toEndOf="@id/measure_po4_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_n_no3_text_view" />
    <!--p-po4-->
    <TextView
        android:id="@+id/title_p_po4_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_76"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/meas_p_po4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_po4_text_view" />

    <TextView
        android:id="@+id/measure_p_po4_text_view"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toEndOf="@id/title_p_po4_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_po4_text_view"
        tools:text="0.002" />

    <TextView
        android:id="@+id/count_p_po4_text_view"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/count_mgl"
        app:layout_constraintStart_toEndOf="@id/measure_p_po4_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_po4_text_view" />

    <Button
        android:id="@+id/button_back_home"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@drawable/shape_btn"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_36"
        android:text="@string/back_btn"
        app:icon="@drawable/baseline_arrow_back_24"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/measure_p_po4_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>