<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/titleDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/title_tools"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoDetailImageView" />

    <ImageView
        android:id="@+id/photoDetailImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_400"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_44"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/titleDetailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/photo_tools" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_170"
        android:layout_marginBottom="@dimen/dp_20"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/back_to_gallery"
        app:backgroundTint="@color/sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/savePhotoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDetailTextView"
        app:srcCompat="@drawable/ic_back_bottom"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/savePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/save_pic_btm"
        app:backgroundTint="@color/sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backGalleryButton"
        app:layout_constraintTop_toBottomOf="@+id/titleDetailTextView"
        app:layout_goneMarginEnd="@dimen/dp_20"
        app:srcCompat="@drawable/ic_save_bottom"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>